# chaobot

./: DEVELOPMENT_PLAN.md  LICENSE  OPTIMIZATIONS.md  PHASE2_SUMMARY.md  README.md  config_fixed.json  pyproject.toml
chaobot/: __init__.py  __main__.py  cli.py
chaobot/agent/: __init__.py  context.py  loop.py  memory.py  planner.py  runner.py  subagent.py
chaobot/agent/tools/: __init__.py  base.py  browser.py  confirmation.py  file.py  registry.py  shell.py  web.py
chaobot/bus/: __init__.py  events.py  queue.py
chaobot/channels/: __init__.py  base.py  feishu.py  manager.py
chaobot/config/: __init__.py  manager.py  schema.py
chaobot/core/: agent.py  bus.py
chaobot/cron/: __init__.py  manager.py
chaobot/dashboard/: __init__.py  app.py  message_viewer.py  session_manager.py
chaobot/dashboard/templates/: index.html
chaobot/gateway/: __init__.py  server.py  websocket.py
chaobot/heartbeat/: __init__.py  monitor.py
chaobot/providers/: __init__.py  base.py  litellm_provider.py  openai_compatible.py  registry.py  spec.py
chaobot/skills/: __init__.py  loader.py  selector.py
chaobot/skills/github/: SKILL.md
chaobot/skills/memory/: SKILL.md
chaobot/skills/skill-vetter/: SKILL.md
chaobot/skills/summarize/: SKILL.md
chaobot/skills/tavily-search/: SKILL.md
chaobot/skills/ui-ux/: SKILL.md
chaobot/skills/video-generator/: README.md  SETUP_GUIDE.md  SKILL.md  config.yaml  example.py  example_workflow.py  generate_video.py  test_setup.py  test_workflow.sh  video_generator.py
chaobot/skills/video-generator/evals/: evals.json
chaobot/skills/weather/: SKILL.md
chaobot/templates/: __init__.py  system_prompt.md
chaobot/utils/: feishu_formatter.py  progress.py  prompt.py  rate_limiter.py
docs/: ARCHITECTURE_DIAGRAM.md  NANOBOT_DESIGN.md
tests/: __init__.py  test_browser_tools.py  test_config.py  test_confirmation.py  test_context.py  test_feishu.py  test_memory.py  test_planner.py  test_subagent.py  test_tools.py  test_workspace.py
workspace/: AGENTS.md  SOUL.md  TOOLS.md
workspace/.learnings/: ERRORS.md  LEARNINGS.md
