[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaobot"
version = "0.1.0"
description = "🤖 chaobot: A lightweight personal AI assistant"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "assistant", "agent", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0.0",
    "schedule>=1.2.0",
    "python-crontab>=3.0.0",
    "platformdirs>=4.0.0",
    "flask>=3.0.0",
    "playwright>=1.40.0",
    "edge-tts>=6.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
matrix = [
    "matrix-nio>=0.24.0",
    "python-olm>=3.2.0",
]
discord = [
    "py-cord>=2.4.0",
]
telegram = [
    "python-telegram-bot>=20.7",
]

[project.scripts]
chaobot = "chaobot.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/chaobot"
Repository = "https://github.com/yourusername/chaobot"
Issues = "https://github.com/yourusername/chaobot/issues"

[tool.hatch.build.targets.wheel]
packages = ["chaobot"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
